Cleanup depdendencies